# website

./: .gitignore  .markdownlint-cli2.mjs  .prettierignore  AGENTS.md  CONTEXT.md  DESIGN.md  LICENSE  README.md  astro.config.mjs  eslint.config.js  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  stylelint.config.mjs  vitest.config.ts
.github/workflows/: deploy.yml  pages.yml
docs/: about.md  docsGovernance.test.ts  index.md  tags.md
docs/adr/: 0001-prefer-documentation-native-stack.md  0002-reference-ai-coding-dictionary.md  0003-retain-astro-starlight.md  0004-adopt-mkdocs-material.md
docs/agents/: style-guide.md
docs/ai-agent/: index.md
docs/deep-learning/: attention-paper.md  attention.md  backpropagation.md  gpt-transformer.md  gradient-descent.md  index.md  neural-network-structure.md
docs/harness/: anthropic.md  minimal-swe-agent-main.py  minimal-swe-agent.md  openai.md
docs/javascripts/: header-home-link.js  home.js  mermaid.mjs  pdf-viewer.mjs  zoom.js
docs/model/: index.md
docs/notes/: index.md  mkdocs.yml  reading-route.md
docs/papers/: react-paper.md  react.md  swe-agent-paper.md  swe-agent.md
docs/stylesheets/: extra.css
docs/topics/: agent-basics.md  implementation-boundaries.md  long-term-memory.md
ext/: slugs.py
hooks/: reading_time.py  socialmedia.py
papers/: ReAct_agent_notes.md
scripts/: audit-built-site.ts  dictionary-terms.ts
src/: content.config.ts
src/components/: PdfViewer.astro
src/data/: papers.ts
src/dictionary/: audit.test.ts  (+2 more)
tests/: test_reading_time.py  test_site.py
(+77 files in other folders)
