[project]
name = "blog"
version = "0.1.0"
description = "基于 MkDocs Material 的个人博客与知识库。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material[imaging]>=9.6.14",
    "cairosvg>=2.7.1",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ext"]
