[project]
name = "website"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material>=9.7.6",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["hooks"]

[tool.ty.environment]
extra-paths = ["hooks"]
