[project]
name = "website"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jieba>=0.42.1",
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.6,<10",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.22",
    "ty>=0.0.60",
]

[tool.pytest.ini_options]
addopts = "--cov=tests --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "UP"]

[tool.ty]
